# nanoRL

./: .gitignore  LICENSE  README.md  gsm8k_grpo.py  gsm8k_grpo_autoresearch.py  gsm8k_sft_grpo.py  learn_hf_transformers.ipynb  learn_hf_transformers.py  learn_model_hierarchy.md  minimal_dpo.ipynb  minimal_dpo.py  minimal_grpo.ipynb  minimal_grpo.py  minimal_ppo.ipynb  minimal_ppo.py  minimal_sft.ipynb  minimal_sft.py  program.md  pyproject.toml  results.tsv
