[project]
name = "nanorl"
version = "0.1.0"
description = "Minimal, single-file implementations of SFT, DPO, GRPO, and PPO for language model fine-tuning."
authors = [{name = "Ethan He"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]

[project.urls]
Repository = "https://github.com/ethanhe42/nanoRL"
